--- a/frontend/src/app/features/dashboard/components/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/components/dashboard.component.html
@@ -536,7 +536,7 @@
 
 
 <!-- Upload Modal -->
-<div class="modal fade" id="importFileModal" tabindex="-1" aria-labelledby="importFileModalLabel" aria-hidden="true">
+<!--<div class="modal fade" id="importFileModal" tabindex="-1" aria-labelledby="importFileModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -553,6 +553,44 @@
     </div>
   </div>
 </div>
+-->
+
+<!-- Upload Modal -->
+<div class="modal fade" id="importFileModal" tabindex="-1" aria-labelledby="importFileModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="importFileModalLabel">Upload File</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!-- File Upload Area -->
+        <div class="upload-area border rounded p-4 text-center">
+          <div 
+            class="upload-message"
+            (dragover)="onDragOver($event)"
+            (dragleave)="onDragLeave($event)"
+            (drop)="onDrop($event)"
+            (click)="fileInput.click()"
+          >
+            <i class="bi bi-cloud-upload mb-2" style="font-size: 2rem;"></i>
+            <p class="m-0">Drag & Drop your file here, or click to select</p>
+            <input type="file" class="form-control d-none" (change)="onFileUploadSelect($event)" #fileInput />
+          </div>
+          <div *ngIf="selectedFileForUpload" class="mt-3">
+            <strong>Selected File:</strong> {{ selectedFileForUpload.name }}
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="uploadFile()" [disabled]="!selectedFileForUpload">Upload</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 
 <!-- File Preview Modal -->
