--- a/frontend/src/app/features/dashboard/components/navbar/navbar.component.html
+++ b/frontend/src/app/features/dashboard/components/navbar/navbar.component.html
@@ -33,7 +33,7 @@
 </nav>
 
 <!-- Modal for file upload -->
-<div class="modal fade" id="uploadModal" tabindex="-1" aria-labelledby="uploadModalLabel" aria-hidden="true">
+<!--<div class="modal fade" id="uploadModal" tabindex="-1" aria-labelledby="uploadModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -49,4 +49,40 @@
       </div>
     </div>
   </div>
+</div>-->
+
+<!-- Modal for file upload -->
+<div class="modal fade" id="uploadModal" tabindex="-1" aria-labelledby="uploadModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="uploadModalLabel">Upload Profile Photo</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!-- File Upload Area -->
+        <div class="upload-area border rounded p-4 text-center">
+          <div 
+            class="upload-message"
+            (dragover)="onDragOver($event)"
+            (dragleave)="onDragLeave($event)"
+            (drop)="onDrop($event)"
+            (click)="fileInput.click()"
+          >
+            <i class="bi bi-cloud-upload mb-2" style="font-size: 2rem;"></i>
+            <p class="m-0">Drag & Drop your profile photo here, or click to select</p>
+            <input type="file" class="form-control d-none" (change)="onFileSelected($event)" #fileInput />
+          </div>
+          <div *ngIf="selectedFile" class="mt-3">
+            <strong>Selected File:</strong> {{ selectedFile.name }}
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="uploadProfilePhoto()" [disabled]="!selectedFile">Upload</button>
+      </div>
+    </div>
+  </div>
 </div>
+
