--- a/frontend/src/app/features/dashboard/components/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/components/dashboard.component.html
@@ -516,7 +516,7 @@
 
 
     <!-- Modal -->
-<div class="modal fade" id="importModal" tabindex="-1" aria-labelledby="importModalLabel" aria-hidden="true">
+<!--<div class="modal fade" id="importModal" tabindex="-1" aria-labelledby="importModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -533,7 +533,42 @@
     </div>
   </div>
 </div>
+-->
 
+<!-- Import Modal -->
+<div class="modal fade" id="importModal" tabindex="-1" aria-labelledby="importModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="importModalLabel">Import Products</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!-- File Upload Area -->
+        <div class="upload-area border rounded p-4 text-center">
+          <div 
+            class="upload-message"
+            (dragover)="onImportFileDragOver($event)"
+            (dragleave)="onImportFileDragLeave($event)"
+            (drop)="onImportFileDrop($event)"
+            (click)="fileInput.click()"
+          >
+            <i class="bi bi-cloud-upload mb-2" style="font-size: 2rem;"></i>
+            <p class="m-0">Drag & Drop your Excel file here, or click to select</p>
+            <input type="file" class="form-control d-none" (change)="onFileChange($event)" #fileInput accept=".xlsx, .xls" />
+          </div>
+          <div *ngIf="fileData" class="mt-3">
+            <strong>File Ready for Upload:</strong> {{ selectedFileName }}
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="uploadData()" [disabled]="!fileData">Upload</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- Upload Modal -->
 <!--<div class="modal fade" id="importFileModal" tabindex="-1" aria-labelledby="importFileModalLabel" aria-hidden="true">
