--- a/frontend/src/app/features/dashboard/components/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/components/dashboard.component.html
@@ -305,7 +305,7 @@
   </div>
 
 
-  <!-- Upload and Download Files Section Container -->
+<!-- Upload and Download Files Section Container -->
 <div class="col-md-3">
   <div class="bg-white p-4 rounded shadow-sm">
     <!-- File Management Section -->
@@ -338,7 +338,7 @@
     </ul>-->
 
     <!-- File List -->
-<ul class="list-group">
+<ul class="list-group" style="max-height: 400px; overflow-y: auto;">
   <li *ngFor="let file of files" class="list-group-item d-flex align-items-center">
     <input
       type="checkbox"
@@ -606,11 +606,11 @@
             (dragover)="onDragOver($event)"
             (dragleave)="onDragLeave($event)"
             (drop)="onDrop($event)"
-            (click)="fileInput.click()"
+            (click)="fileInput1.click()"
           >
             <i class="bi bi-cloud-upload mb-2" style="font-size: 2rem;"></i>
             <p class="m-0">Drag & Drop your file here, or click to select</p>
-            <input type="file" class="form-control d-none" (change)="onFileUploadSelect($event)" #fileInput />
+            <input type="file" class="form-control d-none" (change)="onFileUploadSelect($event)" #fileInput1 accept=".xlsx, .xls, .csv, .pdf, .jpg, .png"/>
           </div>
           <div *ngIf="selectedFileForUpload" class="mt-3">
             <strong>Selected File:</strong> {{ selectedFileForUpload.name }}
