--- a/frontend/src/app/features/auth/components/login/login.component.html
+++ b/frontend/src/app/features/auth/components/login/login.component.html
@@ -29,6 +29,9 @@
               <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="text-danger mt-1">
                 Password is required.
               </div>
+              <div class="mt-3 text-center">
+                <a  class="text-decoration-none" (click)="openForgotPasswordModal()">Forgot password?</a>
+              </div>
             </div>
             <button type="submit" class="btn w-100 text-black mt-3" [disabled]="loginForm.invalid" style="background-color: #A83FC5; border-color: #A83FC5;">
               Sign In
@@ -44,6 +47,35 @@
     <div class="col-md-6 p-0 d-none d-md-block">
       <img src="https://images.unsplash.com/photo-1556745753-b2904692b3cd?q=80&w=1973&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
            class="img-fluid w-100 h-100" alt="Working Woman" style="object-fit: cover;">
+    </div>
+  </div>
+</div>
+
+<!-- Modal for entering email -->
+<div *ngIf="showModal" class="modal fade show d-block" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Reset Password</h5>
+        <button type="button" class="btn-close" (click)="closeModal()"></button>
+      </div>
+      <div class="modal-body">
+        <form  (ngSubmit)="onSubmit()" #forgotPasswordForm="ngForm">
+          <div class="mb-3">
+            <label for="email" class="form-label">Enter your email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              class="form-control"
+              [(ngModel)]="email"
+              required
+              email
+            />
+          </div>
+          <button type="submit" class="btn btn-primary" [disabled]="forgotPasswordForm.invalid">Submit</button>
+        </form>
+      </div>
     </div>
   </div>
 </div>
