--- a/frontend/src/app/features/dashboard/components/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/components/dashboard.component.html
@@ -100,7 +100,8 @@
       style="width: 200px"
       placeholder="Search products..." 
       [(ngModel)]="searchTerm" 
-      (ngModelChange)="fetchPage(1)" />
+      (ngModelChange)="onSearchTermChange($event)"
+       />
   
     <!-- Filter Button (Positioned to the Right) -->
     <button class="btn btn-primary ml-2" (click)="toggleFilterDropdown()">Filter</button>
@@ -112,7 +113,7 @@
           <input 
             type="checkbox" 
             [(ngModel)]="filterByProductName" 
-            (ngModelChange)="fetchPage(1)" />
+            (ngModelChange)="onSearchTermChange($event)" />
           Product Name
         </label>
       </div>
@@ -121,7 +122,7 @@
           <input 
             type="checkbox" 
             [(ngModel)]="filterByStatus" 
-            (ngModelChange)="fetchPage(1)" />
+            (ngModelChange)="onSearchTermChange($event)" />
           Status
         </label>
       </div>
@@ -130,7 +131,7 @@
           <input 
             type="checkbox" 
             [(ngModel)]="filterByCategory" 
-            (ngModelChange)="fetchPage(1)" />
+            (ngModelChange)="onSearchTermChange($event)" />
           Category
         </label>
       </div>
@@ -139,7 +140,7 @@
           <input 
             type="checkbox" 
             [(ngModel)]="filterByVendor" 
-            (ngModelChange)="fetchPage(1)" />
+            (ngModelChange)="onSearchTermChange($event)" />
           Vendor
         </label>
       </div>
