--- a/frontend/src/app/features/dashboard/components/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/components/dashboard.component.html
@@ -51,7 +51,7 @@
       <option *ngFor="let user of users" [value]="user.id">{{ user.username }}</option>
     </select>
     <input [(ngModel)]="chatMessage" (keyup.enter)="sendMessage()" placeholder="Type a message..." />
-    <button (click)="sendMessage()">Send</button>
+    <button class = "btn btn-blue-violet me-2" (click)="sendMessage()">Send</button>
   </div>
 </div>
 
@@ -74,18 +74,18 @@
         </div>
 
         <!-- Action Buttons -->
-        <div>
-          <button class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#moveToModal" [disabled]="selectedProducts.length === 0">
+        <div class="btn-group mb-3" role="group">
+          <button class="btn btn-outline-blue-violet me-2" data-bs-toggle="modal" data-bs-target="#moveToModal" [disabled]="selectedProducts.length === 0">
             <i class="bi bi-arrow-right-circle"></i> Move To cart
           </button>
-          <button class="btn btn-outline-primary me-2" (click)="downloadAllSelected()" [disabled]="selectedProducts.length === 0">
+          <button class="btn btn-outline-blue-violet me-2" (click)="downloadAllSelected()" [disabled]="selectedProducts.length === 0">
             <i class="bi bi-download"></i> Download All
           </button>
           <!-- Import Button -->
-          <button class="btn btn-outline-primary me-1" data-bs-toggle="modal" data-bs-target="#importModal">
+          <button class="btn btn-outline-blue-violet me-1" data-bs-toggle="modal" data-bs-target="#importModal">
             <i class="bi bi-upload"></i> Import
           </button>
-          <button class="btn btn-primary me-2" data-bs-toggle="modal" data-bs-target="#addProductModal">
+          <button class="btn btn-blue-violet me-2" data-bs-toggle="modal" data-bs-target="#addProductModal">
             <i class="bi bi-plus-circle"></i> Add 
           </button>
         </div>
@@ -104,7 +104,7 @@
        />
   
     <!-- Filter Button (Positioned to the Right) -->
-    <button class="btn btn-primary ml-2" (click)="toggleFilterDropdown()">Filter</button>
+    <button class="btn btn-blue-violet ml-2" (click)="toggleFilterDropdown()">Filter</button>
     
     <!-- Filter Dropdown (Vertical List below the Filter Button) -->
     <div *ngIf="isFilterDropdownVisible" class="filter-dropdown position-absolute bg-light border shadow-sm mt-2 p-3" style="width: 200px">
@@ -148,18 +148,18 @@
   </div>
   
     <!-- View and Cart Buttons -->
-    <div class="d-flex mb-3">
-      <button class="btn" [ngClass]="{'btn-primary': !showCart, 'btn-outline-secondary': showCart}"
+    <div class="btn-group mb-3" role="group">
+      <button class="btn" [ngClass]="{'btn-blue-violet': !showCart, 'btn-outline-secondary': showCart}"
         (click)="toggleTable('all')">View All
       </button>
-      <button class="btn" [ngClass]="{'btn-primary': showCart, 'btn-outline-secondary': !showCart}"
+      <button class="btn" [ngClass]="{'btn-blue-violet': showCart, 'btn-outline-secondary': !showCart}"
         (click)="toggleTable('cart')">Cart
       </button>
     </div>
 
     <!-- Inventory Table -->
     <div *ngIf="!showCart"  class="table-responsive">
-      <table class="table table-striped table-bordered table-hover mb-0">
+      <table class="table  table-bordered table-hover mb-0">
         <thead class="table-light">
           <tr>
             <th><input type="checkbox" class="form-check-input"></th>
@@ -228,6 +228,7 @@
               </div>
 
             </td>
+            
             <td>
               <div *ngIf="!selectedProductForEdit || product.product_id !== selectedProductForEdit.product_id">
                 <span>{{ product.quantity_in_stock }}</span>
@@ -363,14 +364,14 @@
   <div class="bg-white p-4 rounded shadow-sm">
     <!-- File Management Section -->
     <h4 class="mb-3">File Management</h4>
-    <div class="d-flex gap-2 mb-3">
+    <div class="btn-group mb-3" role="group">
       <!-- Upload Button -->
-      <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#importFileModal">
+      <button class="btn btn-blue-violet btn-sm" data-bs-toggle="modal" data-bs-target="#importFileModal">
         <i class="bi bi-upload"></i> Upload
       </button>
 
       <!-- Download Selected Button -->
-      <button class="btn btn-outline-primary btn-sm" (click)="downloadSelectedFiles()" [disabled]="selectedFiles.size === 0">
+      <button class="btn btn-outline-blue-violet btn-sm" (click)="downloadSelectedFiles()" [disabled]="selectedFiles.size === 0">
         <i class="bi bi-download"></i> Download Selected
       </button>
     </div>
@@ -379,24 +380,26 @@
 
 
     <!-- File List -->
-<ul class="list-group" style="max-height: 400px; overflow-y: auto;">
-  <li *ngFor="let file of files" class="list-group-item d-flex align-items-center">
-    <input
-      type="checkbox"
-      class="form-check-input me-2"
-      [checked]="selectedFiles.has(file.key)"
-      (change)="toggleFileSelection(file.key)"
-    />
-    <span
-      class="text-truncate text-primary"
-      style="cursor: pointer;"
-      (click)="previewFile(file)"
-      title="{{ file.key }}"
-    >
-      {{ file.key }}
-    </span>
-  </li>
-</ul>
+    <ul class="list-group" style="max-height: 400px; overflow-y: auto;">
+      <li *ngFor="let file of files" class="list-group-item d-flex align-items-center">
+        <input
+          type="checkbox"
+          class="form-check-input me-2"
+          [checked]="selectedFiles.has(file.key)"
+          (change)="toggleFileSelection(file.key)"
+        />
+        <i [ngClass]="getFileIconClass(file.key)" class="me-2"></i>
+        <span
+          class="text-truncate"
+          style="cursor: pointer; color: #8A2BE2;"
+          (click)="previewFile(file)"
+          title="{{ file.key }}"
+        >
+          {{ extractFileName(file.key) }}
+        </span>
+      </li>
+    </ul>
+    
 
   </div>
 </div>
@@ -482,7 +485,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" (click)="addProduct()">Add Product</button>
+          <button type="button" class="btn btn-blue-violet" (click)="addProduct()">Add Product</button>
         </div>
       </div>
     </div>
@@ -549,7 +552,7 @@
           <!-- Cancel and Move Buttons -->
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
             (click)="clearSelectedProducts()">Cancel</button>
-          <button type="button" class="btn btn-primary" (click)="moveSelectedProducts()">
+          <button type="button" class="btn btn-blue-violet" (click)="moveSelectedProducts()">
             Move
           </button>
         </div>
@@ -607,7 +610,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" (click)="uploadData()" [disabled]="!fileData">Upload</button>
+        <button type="button" class="btn btn-blue-violet" (click)="uploadData()" [disabled]="!fileData">Upload</button>
       </div>
     </div>
   </div>
@@ -662,7 +665,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" (click)="uploadFile()" [disabled]="!selectedFileForUpload">Upload</button>
+        <button type="button" class="btn btn-blue-violet" (click)="uploadFile()" [disabled]="!selectedFileForUpload">Upload</button>
       </div>
     </div>
   </div>
