--- a/frontend/src/app/features/dashboard/components/navbar/navbar.component.html
+++ b/frontend/src/app/features/dashboard/components/navbar/navbar.component.html
@@ -80,7 +80,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" (click)="uploadProfilePhoto()" [disabled]="!selectedFile">Upload</button>
+        <button type="button" class="btn btn-blue-violet" (click)="uploadProfilePhoto()" [disabled]="!selectedFile">Upload</button>
       </div>
     </div>
   </div>
