--- a/frontend/src/app/features/dashboard/components/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/components/dashboard.component.html
@@ -50,6 +50,10 @@
     <select [(ngModel)]="selectedUserId">
       <option *ngFor="let user of users" [value]="user.id">{{ user.username }}</option>
     </select>
+
+    <!-- <select [(ngModel)]="selectedUser" (change)="onUserChange($event)">
+      <option *ngFor="let user of users" [value]="user.id">{{ user.username }}</option>
+    </select> -->
     <input [(ngModel)]="chatMessage" (keyup.enter)="sendMessage()" placeholder="Type a message..." />
     <button class = "btn btn-blue-violet me-2" (click)="sendMessage()">Send</button>
   </div>
@@ -87,6 +91,9 @@
           </button>
           <button class="btn btn-blue-violet me-2" data-bs-toggle="modal" data-bs-target="#addProductModal">
             <i class="bi bi-plus-circle"></i> Add 
+          </button>
+          <button class="btn btn-blue-violet" data-bs-toggle="modal" data-bs-target="#importedFilesModal">
+            <i class="bi bi-list"></i> View Imported Files
           </button>
         </div>
       </div>
@@ -159,7 +166,7 @@
 
     <!-- Inventory Table -->
     <div *ngIf="!showCart"  class="table-responsive">
-      <table class="table  table-bordered table-hover mb-0">
+      <table class="table table-hover mb-0">
         <thead class="table-light">
           <tr>
             <th><input type="checkbox" class="form-check-input"></th>
@@ -561,28 +568,9 @@
   </div>
 
 
-    <!-- Modal -->
-<!--<div class="modal fade" id="importModal" tabindex="-1" aria-labelledby="importModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="importModalLabel">Import Products</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <input type="file" id="excelFile" (change)="onFileChange($event)" class="form-control" accept=".xlsx, .xls" />
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" (click)="uploadData()">Upload</button>
-      </div>
-    </div>
-  </div>
-</div>
--->
 
 <!-- Import Modal -->
-<div class="modal fade" id="importModal" tabindex="-1" aria-labelledby="importModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="importModal" tabindex="-1" aria-labelledby="importModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -590,7 +578,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <!-- File Upload Area -->
+        
         <div class="upload-area border rounded p-4 text-center">
           <div 
             class="upload-message"
@@ -614,27 +602,42 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
-<!-- Upload Modal -->
-<!--<div class="modal fade" id="importFileModal" tabindex="-1" aria-labelledby="importFileModalLabel" aria-hidden="true">
+
+<div class="modal fade" id="importModal" tabindex="-1" aria-labelledby="importModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="importFileModalLabel">Upload File</h5>
+        <h5 class="modal-title" id="importModalLabel">Import Products</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <input type="file" id="fileInput" (change)="onFileUploadSelect($event)"  class="form-control" />
+        
+        <div class="upload-area border rounded p-4 text-center">
+          <div 
+            class="upload-message"
+            (dragover)="onImportFileDragOver($event)"
+            (dragleave)="onImportFileDragLeave($event)"
+            (drop)="onImportFileDrop($event)"
+            (click)="fileInput.click()"
+          >
+            <i class="bi bi-cloud-upload mb-2" style="font-size: 2rem;"></i>
+            <p class="m-0">Drag & Drop your Excel file here, or click to select</p>
+            <input type="file" class="form-control d-none" (change)="onFileChange($event)" #fileInput accept=".xlsx, .xls" />
+          </div>
+          <div *ngIf="fileData" class="mt-3">
+            <strong>File Ready for Upload:</strong> {{ selectedFileForImport?.name }}
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" (click)="uploadFile()">Upload</button>
+        <button type="button" class="btn btn-blue-violet" (click)="uploadImportedFile()" [disabled]="!fileData">Upload</button>
       </div>
     </div>
   </div>
 </div>
--->
 
 <!-- Upload Modal -->
 <div class="modal fade" id="importFileModal" tabindex="-1" aria-labelledby="importFileModalLabel" aria-hidden="true">
@@ -690,4 +693,34 @@
   </div>
 </div>
 
-
+<!-- Imported Files Modal -->
+<div class="modal fade" id="importedFilesModal" tabindex="-1" aria-labelledby="importedFilesModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="importedFilesModalLabel">Imported Files</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>File Name</th>
+              <th>Status</th>
+              <th>Error File</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let file of ImportedFiles">
+              <td>{{ extractFileName(file.file_key) }}</td>
+              <td>{{ file.status }}</td>
+              <td *ngIf="file.error_file_key">
+                <a [href]="file.error_file_key" target="_blank">Download Error File</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
